# sensors-labs-ros2

./: README.md
docker/: Dockerfile  build.sh  docker-compose.yml  run.sh
workspace/src/lab00/: CMakeLists.txt  package.xml
workspace/src/lab00/include/lab00/: subscriber.hpp
workspace/src/lab00/launch/: display.rviz  example.launch.py  extract.sh
workspace/src/lab00/msg/: SampleMessage.msg
workspace/src/lab00/src/: publisher_node.cpp  subscriber.cpp  subscriber_node.cpp
workspace/src/lab01/: CMakeLists.txt  package.xml
workspace/src/lab01/data/: get_data.sh
workspace/src/lab01/msg/: Encoder.msg
workspace/src/lab01/src/: encoder_node.cpp  odometry_node.cpp
