<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab00</name>
  <version>0.0.1</version>
  <description>The package.xml file provides a short description of the content and lists the dependencies in three categories: build, run, and test. A depend means a package is needed both at build and at run time.</description>
  <maintainer email="todor.stoyanov@oru.se">tsv</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- for building nodes and libraries -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- for running launch file -->
  <exec_depend>sensor_msgs</exec_depend>

  <!-- for message generation -->
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
